// https://github.com/grpc-ecosystem/grpc-gateway/blob/master/third_party/googleapis/google/api/http.proto
syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// https://github.com/googleapis/googleapis/blob/master/google/cloud/dataproc/v1/clusters.proto
service Users {
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }

    rpc GetUser(GetUserRequest) returns (User) {
        option (google.api.http) = {
            get: "/v1/users/{id}"
        };
    }

    rpc CreateUser(CreateUserRequest) returns (User) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }

    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            put: "/v1/users/{id}"
            body: "*"
        };
    }

    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/users/{id}"
        };
    }
}

message ListUsersRequest {}

message ListUsersResponse {
    repeated User users = 1;
}

message GetUserRequest {
    string id = 1;
}

message CreateUserRequest {
    string name = 1;
    string real_name = 2;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
}

message UpdateUserResponse {}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {}

message User {
    string id = 1;
    string name = 2;
    string real_name = 3;
}
